--- a/render.yaml
+++ b/render.yaml
@@ -14,3 +14,13 @@ services:
         value: https://api.india.delta.exchange
       - key: PAPER_TRADING
         value: "True"
+
+  - type: web
+    name: delta-bot-dashboard
+    env: docker
+    dockerfilePath: ./Dockerfile.dashboard
+    autoDeploy: true
+    healthCheckPath: /
+    envVars:
+      - key: BOT_API_URL
+        sync: false
